--- a/TokenIssue/appsettings.json
+++ b/TokenIssue/appsettings.json
@@ -1,7 +1,7 @@
 {
   "algod": {
-    "apiUrl": "",
-    "apiKey": "",
-    "apiKeyHeader": ""
+    "apiUrl": "https://mainnet-api.4160.nodely.dev/",
+    "apiKey": null,
+    "apiKeyHeader": null
   }
 }
